solving orElse comment